# maunting-server-manager

./: .gitattributes  .gitignore  AGENTS.md  Caddyfile.template  Ctmpplaywright-test-auth.js  LICENSE  README.md  RELEASE_NOTES_v1.2.10.md  RELEASE_NOTES_v1.2.11.md  RELEASE_NOTES_v1.2.12.md  RELEASE_NOTES_v1.2.6.md  RELEASE_NOTES_v1.2.7.md  RELEASE_NOTES_v1.2.8.md  RELEASE_NOTES_v1.2.9.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.4.5.md  RELEASE_NOTES_v1.4.6.md  RELEASE_NOTES_v1.4.7.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v1.7.1.md  RELEASE_NOTES_v1.7.10.md  RELEASE_NOTES_v1.7.2.md  RELEASE_NOTES_v1.7.3.md  RELEASE_NOTES_v1.7.4.md  RELEASE_NOTES_v1.7.5.md  RELEASE_NOTES_v1.7.6.md  RELEASE_NOTES_v1.7.7.md  RELEASE_NOTES_v1.7.8.md  RELEASE_NOTES_v1.7.9.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v2.0.0.md  conanserver.sh  design-qa.md  dump_payload.py  full_diff.txt  (+13 more)
backend/: .env.example  alembic.ini  check_db.py  config.py  cookies.py  database.py  database_policy.py  dependencies.py  dev-requirements.txt  main.py  msm.db  requirements.txt
dis-sidecar/: .env.example  _isolated_test_deferred.mjs  package-lock.json  package.json  server.mjs  test-backup-endpoints.mjs
docs/: blueprints.md  file-workspace.md  release-notes-3.0.0.md  self-hosting.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
lib/: ui.sh  (+10 more)
recovery/src-tauri/: Cargo.toml  tauri.conf.json
recovery/src-tauri/capabilities/: default.json
recovery/src-tauri/icons/: icon.icns
recovery/src-tauri/src/: commands.rs  lib.rs  main.rs
(+867 files in other folders)
