[package]
name = "msm-backup-recovery"
version = "0.1.0"
description = "MSM Backup Recovery - Standalone Tauri Desktop-App"
edition = "2021"
rust-version = "1.77"

[lib]
name = "msm_backup_recovery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tar.gz extraction crates are added in the `rust-extraction` feature (M2):
# tar = "0.4.46"
# flate2 = "1.1.9"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
